tests/nightly/ui/invalid_generics.stderr
error: expected 1 generic parameters, found 0
 --> tests/nightly/ui/invalid_generics.rs:4:22
  |
4 | #[auto_register_type(Test)]
  |                      ^^^^
